thread refactor